Fix dark mode issues

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
     color: var(--meui-light-text-color);
 }
 
-body.dark-mode {
+#root.dark-mode {
     background-color: var(--meui-dark-background-color);
     color: var(--meui-dark-text-color);
 }
